# rag_chatbot

./: .pre-commit-config.yaml  README.md  app.py  pyproject.toml  requirements.txt
data/faq/: faq1.md  faq2.md  faq3.md  faq4.md  faq5.md  faq6.md  faq7.md
data/test_data/: test_data.py
notebook/: exploration.html  exploration.ipynb
src/: constants.py  utils.py
src/module/: document_ingestion_pipeline.py  rag_pipeline.py  response_generation_pipeline.py  retrieval_pipeline.py
